--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,11 @@
 .choresText {
-   color: black;
+   color: green;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: x-large;
+   font-style: italic;
 }
 
 .choresHeading {
-   color: black;
+   color: green;
+   text-decoration: underline;
 }
